Add tarantool 1.6 support